Adding from Q 1 to 30 respectively

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     
     <div>
-        <p id="Ques32"></p>
+        <p id="zuks"></p>
     </div>
     <footer>YOU ARE NOT ALLOWED TO CHANGES ON THE HTML PAGE AT ALL</footer>
 
